--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ ptyprocess==0.7.0
 Pygments==2.13.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
+PyYAML==6.0
 pyzmq==24.0.1
 scipy==1.7.3
 six==1.16.0
